dist/softctf-guess-file-content/Deployment.guess-file-content-app.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guess-file-content-app
  namespace: softctf
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: softctf-guess-file-conte-guess-file-content-deployment-c857a087
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: softctf-guess-file-conte-guess-file-content-deployment-c857a087
    spec:
      automountServiceAccountToken: false
      containers:
        - image: ghcr.io/miello/softctf-guess-file-content:5b7b5fc15c8fdf9182d359e99d33d48c97285330
          imagePullPolicy: IfNotPresent
          name: guess-file-content-app
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
      dnsPolicy: ClusterFirst
      hostNetwork: false
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: true
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
