dist/softctf-guess-file-content/Service.guess-file-content-service.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: guess-file-content-service
  namespace: softctf
spec:
  externalIPs: []
  ports:
    - name: tcp
      port: 80
      targetPort: 8080
  selector:
    cdk8s.io/metadata.addr: softctf-guess-file-conte-guess-file-content-deployment-c857a087
  type: ClusterIP
